creusot/tests/should_fail/prusti/calls/cur_fin.stderr
error: expected `&mut _` found `creusot_contracts::prusti::Zombie<&'now mut X>`
  --> cur_fin.rs:13:9
   |
13 |     cur(x)
   |         ^

error: aborting due to 1 previous error

